k8manifest/backend_statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: final
  labels:
    app.kubernetes.io/name: mysql
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: employeeapp
spec:
  serviceName: "mysql"
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mysql
      app.kubernetes.io/component: backend
      app.kubernetes.io/part-of: employeeapp
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mysql
        app.kubernetes.io/component: backend
        app.kubernetes.io/part-of: employeeapp
    spec:
      containers:
      - name: mysql-pod
        image: 636276102612.dkr.ecr.us-east-1.amazonaws.com/mysql_image
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-pvc 
          mountPath: /var/lib/mysql
        resources:
          requests:
            cpu: '100m'
            memory: '500Mi'
          limits:
            cpu: '200m'
            memory: '1Gi'
  volumeClaimTemplates:
  - metadata:
      name: mysql-pvc
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "gp2"
      resources:
        requests:
          storage: 10Gi
