k8manifest/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  namespace: final
  labels:
    app.kubernetes.io/name: myapp
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: employeeapp
    app.kubernetes.io/version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: myapp
      app.kubernetes.io/component: frontend
      app.kubernetes.io/part-of: employeeapp
      app.kubernetes.io/version: v1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: myapp
        app.kubernetes.io/component: frontend
        app.kubernetes.io/part-of: employeeapp
        app.kubernetes.io/version: v1
    spec:
      containers:
        - name: myapp-pod
          image: 636276102612.dkr.ecr.us-east-1.amazonaws.com/app_image
          ports:
            - containerPort: 81
          resources:
            requests:
              cpu: '100m'
              memory: '100Mi'
            limits:
              cpu: '200m'
              memory: '200Mi'
