k8manifest/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-svc
  namespace: final
  labels:
    app.kubernetes.io/name: myapp
spec:
  ports:
    - port: 80
      targetPort: 81
  selector:
    app.kubernetes.io/name: myapp
