k8manifest/load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-controller-lb
  namespace: ingress-nginx
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: my-nginx
